syntax = "proto3";
package kira.gov;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/KiraCore/sekai/x/gov/types";

message IdentityRecord {
    uint64 id = 1;
    map<string, string> infos = 2;
    google.protobuf.Timestamp date = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message AddressIdentityRecord {
    uint64 id = 1;
    bytes address = 2 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.moretags) = "yaml:\"address\""
    ];
    map<string, string> infos = 3;
    google.protobuf.Timestamp date = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message VerifiedIdRecordByAddress {
    bytes address = 1 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.moretags) = "yaml:\"address\""
    ];
    uint64 recordId = 2;
}

message VerifiedIdRecordsByAddress {
    bytes address = 1 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.moretags) = "yaml:\"address\""
    ];
    repeated uint64 recordIds = 2;
}

message MsgCreateIdentityRecord {
    bytes address = 1 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.moretags) = "yaml:\"address\""
    ];
    map<string, string> infos = 2;
    google.protobuf.Timestamp date = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message IdentityRecordsVerify {
    uint64 id = 1;
    bytes address = 2 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.moretags) = "yaml:\"address\""
    ];
    bytes verifier = 3 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.moretags) = "yaml:\"verifier\""
    ];
    repeated uint64 recordIds = 4;
    string tip = 5 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
        (gogoproto.nullable) = false
    ];    
}

message MsgRequestIdentityRecordsVerify {
    bytes address = 1 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.moretags) = "yaml:\"address\""
    ];
    bytes verifier = 2 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.moretags) = "yaml:\"verifier\""
    ];
    repeated uint64 recordIds = 3;
    string tip = 4 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
        (gogoproto.nullable) = false
    ];
}

message MsgApproveIdentityRecords {
    bytes verifier = 1 [
        (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
        (gogoproto.moretags) = "yaml:\"verifier\""
    ];
    uint64 verifyRequestId = 2;
}